tried to stop the image pencils from covering the text when the webpage is resized smaller

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,9 @@ margin-right: 20px;
     background-position: top right;
     padding-bottom: 100px;
 }
+.education p{
+    width: 65%;
+}
 
 /* Contact Info
 --------------------------------*/
